agregando nuevos cambios

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <footer>
         <h2>
-            <a href="http://www.riwi.io">Riwi!!</a>
+            <a href="http://www.riwi.io">Pagina de Riwi!!</a>
         </h2>
     </footer>
 </body>
